# testing-knowledge-base

./: .gitignore  .gitlab-ci.yml  404.html  CLAUDE.md  CNAME  README.md  index.html  mkdocs.yml
jmeter-working-dir/webapp/: CLAUDE.md  EVALUATION.md  PHASE_PLAN.md  PLAN.md  README.md  __main__.py  jtl_filter.py  loadlitmus.spec  main.py  presets.json  project.json  pyproject.toml  requirements.txt
jmeter-working-dir/webapp/config/: report.properties
jmeter-working-dir/webapp/prompts/: analysis.txt
jmeter-working-dir/webapp/routers/: config.py  dashboard.py  extensions.py  results.py  scripts.py  settings.py  test_data.py  test_plans.py
jmeter-working-dir/webapp/scripts/: build.py
jmeter-working-dir/webapp/services/: analysis.py  auth.py  config_parser.py  data.py  health_history.py  jmeter.py  jmx_patcher.py  jtl_parser.py  metrics_history.py  paths.py  process_manager.py  report.py  report_properties.py  settings.py  slaves.py  templates.py
jmeter-working-dir/webapp/static/css/: style.css
jmeter-working-dir/webapp/static/js/: app.js  (+5 more)
jmeter-working-dir/webapp/templates/: _fleet_config.html  _fleet_extensions.html  _fleet_modals.html  _fleet_slaves.html  base.html  configuration.html  dashboard.html  icons.html  results.html  scripts.html  settings.html  setup.html  slaves.html  test_data.html  test_plans.html  token.html
jmeter-working-dir/webapp/tests/: conftest.py  test_app_dir.py  test_auth.py  test_cli.py  test_config_api.py  test_dashboard_api.py  test_data_api.py  test_plans_api.py  test_results_api.py  test_security.py  test_settings_api.py
(+213 files in other folders)
