[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "loadlitmus"
dynamic = ["version"]
description = "Web dashboard for managing performance test projects"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "aiofiles>=23.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "httpx>=0.25.0",
    "paramiko>=3.4",
    "scp>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyinstaller>=6.0",
]

[project.scripts]
loadlitmus = "webapp.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "webapp.__version__.__version__"}

[tool.setuptools.packages.find]
include = ["webapp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
